--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
   <packaging>jar</packaging>
 
   <name>SplendorServer</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <maven.compiler.target>17</maven.compiler.target>
@@ -18,6 +17,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.9.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-mysql-client</artifactId>
       <version>4.3.3</version>
@@ -25,12 +30,23 @@
     <dependency>
       <groupId>com.github.almasb</groupId>
       <artifactId>fxgl</artifactId>
-      <version>17.1</version>
+      <version>17.2</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
       <version>4.3.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.5.3</version>
+    </dependency>
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.9.0</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 </project>
